@@ -125,6 +125,8 @@ Cacti CHANGELOG
 -issue#5726: Poller cache is not updating when changing hostname
 -issue#5727: Incorrect values status_fail_date and status_rec_date with cmd poller
 -feature#5692: Add a "device enabled/disabled" indicator next to the graphs
+-feature#5710: Notify the admin periodically when a remote data collector goes into heartbeat status
+-feature#5716: Add Aruba Clearpass template
 
 1.2.26
 -issue#5464: PHP warning when view Data Source Info mode with new Data Source
